basic structure setup

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer bg-dark py-3 mt-auto">
     <div class="container text-center">
-        <span class="text-white-50 ">&copy; Random Number Generator 2023</span>
+        <span class="text-white-50 ">&copy; Calculator 2023</span>
     </div>
 </footer>
 
