finished with the basic completion

--- a/views/calculator.ejs
+++ b/views/calculator.ejs
@@ -6,11 +6,11 @@
             <div class="container text-center">
                 <div class="row">
                     <div id="calBody" class="col-6 offset-3 bg-primary border border-3 border-dark rounded">
-                        <div class="bg-secondary m-4 py-2 border border-2 border-dark rounded"><h2 id="calDisplay" class="text-end fs-2 px-3"></h2></div>
+                        <div id="conDisplay" class="bg-dark m-4 py-2 border border-2 border-warning rounded"><h2 id="calDisplay" class="text-end fs-2 px-3"></h2></div>
                         <div class="my-3">
-                            <button id="btnOff" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">OFF</button>
+                            <button id="btnOffOn" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">OFF</button>
                             <button id="btnClear" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">C</button>
-                            <button id="btnPercent" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">%</button>
+                            <button id="btnBackspace" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">Backspace</button>
                             <button id="btnDivide" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">/</button>
                         </div>
                         <div class="my-3">
