--- a/views/calculator.ejs
+++ b/views/calculator.ejs
@@ -2,39 +2,39 @@
 
     <div class="container text-center">
         <div class="col-8 offset-2">
-            <h1 class="display-1 my-5">Calculator!</h1>
+            <h1 class="display-1 my-4">Calculator!</h1>
             <div class="container text-center">
-                <div class="row">
-                    <div id="calBody" class="col-6 offset-3 bg-primary border border-3 border-dark rounded">
-                        <div id="conDisplay" class="bg-dark m-4 py-2 border border-2 border-warning rounded"><h2 id="calDisplay" class="text-end fs-2 px-3"></h2></div>
+                <div class="row row-cols-auto">
+                    <div id="calBody" class="shadow-lg col-xxl-6 offset-xxl-3 bg-primary border border-3 border-dark rounded">
+                        <div id="conDisplay" class="overflow-hidden bg-dark m-4 py-2 border border-2 border-warning rounded"><h2 id="calDisplay" class="text-end fs-2 px-3"></h2></div>
                         <div class="my-3">
                             <button id="btnOffOn" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">OFF</button>
                             <button id="btnClear" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">C</button>
-                            <button id="btnBackspace" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">Backspace</button>
-                            <button id="btnDivide" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">/</button>
+                            <button id="btnBackspace" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">Backspace</button>                           
                         </div>
                         <div class="my-3">
                             <button id="btnSeven" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">7</button>
                             <button id="btnEight" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">8</button>
                             <button id="btnNine" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">9</button>
-                            <button id="btnMultiply" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">x</button>
+                            <button id="btnDivide" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">/</button>
                         </div>
                         <div class="my-3">
                             <button id="btnFour" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">4</button>
                             <button id="btnFive" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">5</button>
                             <button id="btnSix" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">6</button>
-                            <button id="btnMinus" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">-</button>
+                            <button id="btnMultiply" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">x</button>
                         </div>
                         <div class="my-3">
                             <button id="btnOne" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">1</button>
                             <button id="btnTwo" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">2</button>
                             <button id="btnThree" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">3</button>
-                            <button id="btnPlus" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">+</button>
+                            <button id="btnMinus" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">-</button>                           
                         </div>
                         <div class="my-3">
                             <button id="btnZero" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">0</button>
                             <button id="btnPoint" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">.</button>
                             <button id="btnEqual" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">=</button>
+                            <button id="btnPlus" class="fs-4 btn btn-warning border border-2 border-dark mx-2 px-4 rounded">+</button>
                         </div>
                     </div>
                 </div>
