--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,18 +1,24 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Calculator</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/" target="_blank">New Calculator</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Follow Us!</a>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Calculator</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/" target="_blank">New Calculator</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"
+            href="https://www.mediafire.com/file/od6qcc49farb6vn/calculator+Setup+1.0.0.exe/file">Download for
+            Windows</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Follow Us!</a>
+        </li>
+      </ul>
     </div>
-  </nav> 
+  </div>
+</nav>
