added website link

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,7 +16,7 @@
             Windows</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Follow Us!</a>
+          <a class="nav-link" href="https://surajprojects.github.io/tigerxinsights">Follow Us!</a>
         </li>
       </ul>
     </div>
