--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -7,18 +7,19 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/custom.css">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="d-flex flex-column vh-100">
     <%- include("../partials/navbar") %>
         <main class="container mt-5">
-                <%- body %>
+            <%- body %>
 
         </main>
         <%- include("../partials/footer") %>
 
-        <script src="/javascripts/bootstrap.min.js"></script>
-         
+            <script src="/javascripts/bootstrap.min.js"></script>
+
 </body>
 
 </html>
